# SymphonyLakeDataset

./: CMakeLists.txt  ParseSurvey.cpp  ParseSurvey.h  README
data/Maps/140106/: optposes.csv
data/VBags/140106/: image_auxilliary.csv
include/symphony_lake_dataset/: Function.h  ImagePoint.h  ParseSurvey.h  Pose.h  Survey.h  SurveyVector.h  csv_functions.h
src/: Function.cpp  ParseSurvey.cpp  Survey.cpp  SurveyVector.cpp
test/: load_survey.cpp
